@@ -38,7 +38,7 @@
   /*----------------------- PRIVATE VARIABLES/METHODS ------------------------*/
 
   var Bug, Feature,
-   expando = '_fuse' + String(+new Date).slice(0, 10),
+   expando = '_fuse' + String(1 * new Date).slice(0, 10),
    slice = Array.prototype.slice,
    userAgent = global.navigator.userAgent;
 
