@@ -1,3 +1,5 @@
+* Use 1 * foo to more quickly coerce data to numbers instead of +foo. [kangax]
+
 * Change Array method internals from Fuse.Object -> Object usage and throw a TypeError if `this` is null/undefined. [jddalton]
 
 * Ensure the `object` argument of Fuse.Object.hasKey() is coerced to an object in all forks of the method. [jddalton] 
